User input class created

--- a/mariozombie.html
+++ b/mariozombie.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MARIO ZOMBIE</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>MARIO IN ZOMBIE WORLD</h1>
+    <!-- <h1>MARIO IN ZOMBIE WORLD</h1> -->
+    <canvas id="canvas1"></canvas>
+
+    <!-- TODO: Images to be changed later on -->
+    <!-- <img src="/img/player.png" id="playerImage" alt="" /> -->
+    <!-- <img src="/img/background_single.png" id="backgroundImage" alt="" /> -->
+    <!-- <img src="/img/enemy_1.png" id="enemyImage" alt="" /> -->
     <script src="mariozombie.js"></script>
   </body>
 </html>
