--- a/mariozombie.html
+++ b/mariozombie.html
@@ -12,7 +12,7 @@
     <canvas id="canvas1"></canvas>
 
     <!-- TODO: Images to be changed later on -->
-    <!-- <img src="/img/player.png" id="playerImage" alt="" /> -->
+    <img src="/img/player.png" id="playerImage" alt="" />
     <!-- <img src="/img/background_single.png" id="backgroundImage" alt="" /> -->
     <!-- <img src="/img/enemy_1.png" id="enemyImage" alt="" /> -->
     <script src="mariozombie.js"></script>
