--- a/mariozombie.html
+++ b/mariozombie.html
@@ -13,7 +13,7 @@
 
     <!-- TODO: Images to be changed later on -->
     <img src="/img/player.png" id="playerImage" alt="" />
-    <!-- <img src="/img/background_single.png" id="backgroundImage" alt="" /> -->
+    <img src="/img/background_single.png" id="backgroundImage" alt="" />
     <!-- <img src="/img/enemy_1.png" id="enemyImage" alt="" /> -->
     <script src="mariozombie.js"></script>
   </body>
