vertical collision updated

--- a/zombie.html
+++ b/zombie.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <canvas id="canvas"></canvas>
+    <script src="./data/utils.js"></script>
     <script src="./data/CollisionBlock.js"></script>
     <script src="./data/Collisions.js"></script>
     <script src="./data/classes.js"></script>
