created hitbox for player sprite
Rectified the issue of the cropped character sprite to be colliding with the  environment collision boxes that was earlier i.e. the floor. Shrunk the collision box for the character to a hitbox instead. Applied the hitbox for x and y axes.

--- a/zombie.html
+++ b/zombie.html
@@ -12,7 +12,7 @@
     <script src="./data/utils.js"></script>
     <script src="./data/CollisionBlock.js"></script>
     <script src="./data/Collisions.js"></script>
-    <script src="./data/classes.js"></script>
+    <script src="./data/Sprite.js"></script>
     <script src="./data/Player.js"></script>
     <script src="script.js"></script>
   </body>
