--- a/zombie.html
+++ b/zombie.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <canvas id="canvas"></canvas>
+    <div>
+      <canvas id="canvas"></canvas>
+    </div>
     <script src="./data/utils.js"></script>
     <script src="./data/CollisionBlock.js"></script>
     <script src="./data/Collisions.js"></script>
