was using slice instead of splice to remove lol

--- a/zombie.html
+++ b/zombie.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>ZOMBIE FIGHTER</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -16,7 +16,7 @@
     <script src="./data/CollisionBlock.js"></script>
     <script src="./data/Sprite.js"></script>
     <script src="./data/Player.js"></script>
-    <script src="./data/Shoot.js"></script>
+    <!-- <script src="./data/BulletController.js"></script> -->
     <script src="./data/Enemy.js"></script>
     <script src="script.js"></script>
   </body>
