create zombie and timer function

--- a/zombie.html
+++ b/zombie.html
@@ -8,15 +8,21 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div>
+    <div id="container">
+      <div id="top-banner">
+        <div class="empty"></div>
+        <div id="timer">20</div>
+        <div class="empty"></div>
+      </div>
+      <div id="results">WIN</div>
       <canvas id="canvas"></canvas>
     </div>
+
     <script src="./data/utils.js"></script>
     <script src="./data/Collisions.js"></script>
     <script src="./data/CollisionBlock.js"></script>
     <script src="./data/Sprite.js"></script>
     <script src="./data/Player.js"></script>
-    <!-- <script src="./data/BulletController.js"></script> -->
     <script src="./data/Enemy.js"></script>
     <script src="script.js"></script>
   </body>
