added end game conditions

--- a/zombie.html
+++ b/zombie.html
@@ -14,7 +14,7 @@
         <div id="timer">20</div>
         <div class="empty"></div>
       </div>
-      <div id="results">WIN</div>
+      <div id="results"></div>
       <canvas id="canvas"></canvas>
     </div>
 
