--- a/zombie.html
+++ b/zombie.html
@@ -15,6 +15,8 @@
         <div class="empty"></div>
       </div>
       <div id="results"></div>
+      <button id="restart">RESTART</button>
+
       <canvas id="canvas"></canvas>
     </div>
 
