edited timer bug, adjusted hitboxes,

--- a/zombie.html
+++ b/zombie.html
@@ -18,7 +18,7 @@
     <div id="container">
       <div id="top-banner">
         <div class="empty"></div>
-        <div id="timer">20</div>
+        <div id="timer"></div>
         <div class="empty"></div>
       </div>
       <div id="results"></div>
@@ -27,12 +27,12 @@
       <canvas id="canvas"></canvas>
     </div>
 
-    <script src="./data/utils.js"></script>
-    <script src="./data/Collisions.js"></script>
-    <script src="./data/CollisionBlock.js"></script>
-    <script src="./data/Sprite.js"></script>
-    <script src="./data/Player.js"></script>
-    <script src="./data/Enemy.js"></script>
-    <script src="script.js"></script>
+    <script src="./data/utils.js" defer></script>
+    <script src="./data/Collisions.js" defer></script>
+    <script src="./data/CollisionBlock.js" defer></script>
+    <script src="./data/Sprite.js" defer></script>
+    <script src="./data/Player.js" defer></script>
+    <script src="./data/Enemy.js" defer></script>
+    <script src="script.js" defer></script>
   </body>
 </html>
