--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       <canvas id="canvas"></canvas>
     </div>
 
-    <script src="./data/utils.js"></script>
-    <script src="./data/Collisions.js"></script>
-    <script src="./data/CollisionBlock.js"></script>
-    <script src="./data/Sprite.js"></script>
-    <script src="./data/Player.js"></script>
-    <script src="./data/Enemy.js"></script>
+    <script src="./classes/utils.js"></script>
+    <script src="./classes/Collisions.js"></script>
+    <script src="./classes/CollisionBlock.js"></script>
+    <script src="./classes/Sprite.js"></script>
+    <script src="./classes/Player.js"></script>
+    <script src="./classes/Enemy.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
