added in music sound track and sword sound effect

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
   </head>
   <body>
-    <div id="container">
+    <di id="container">
       <div id="top-banner">
         <div class="empty"></div>
         <div id="timer"></div>
@@ -23,6 +23,12 @@
       </div>
       <div id="results"></div>
       <button id="restart">RESTART</button>
+      <audio id="audio" src="./Final Fantasy III DS - 03 Battle.mp3"></audio>
+      <audio id="victory-sound" src="./Victory.mp3"></audio>
+      <audio id="defeat-sound" src="./Defeat.mp3"></audio>
+      <audio id="sword" src="./Sword.mp3"></audio>
+
+
 
       <canvas id="canvas"></canvas>
     </div>
